--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "test": "mocha",
-    "test_time": "mocha --timeout 10000"
+    "test_time": "mocha --timeout 10000",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -24,7 +25,10 @@
     "mocha": "^6.2.2"
   },
   "dependencies": {
+    "axios": "^0.19.0",
+    "body-parser": "^1.19.0",
     "chai": "^4.2.0",
+    "express": "^4.17.1",
     "mongoose": "^5.7.6"
   }
 }
