--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "test": "test"
   },
   "scripts": {
-    "test": "mocha",
-    "test_time": "mocha --timeout 10000",
+    "dev": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "test:unit": "vue-cli-service test:unit",
     "start": "node index.js"
   },
   "repository": {
@@ -22,8 +23,11 @@
   },
   "homepage": "https://github.com/lifeFedorovAlexey/factory#readme",
   "devDependencies": {
-    "chai": "^4.2.0",
-    "mocha": "^6.2.2"
+    "core-js": "^3.3.2",
+    "mocha": "^6.2.2",
+    "vue": "^2.6.10",
+    "vue-router": "^3.1.3",
+    "vuex": "^3.0.1"
   },
   "dependencies": {
     "axios": "^0.19.0",
@@ -31,6 +35,19 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "http": "0.0.0",
-    "mongoose": "^5.7.6"
+    "mongoose": "^5.7.6",
+    "@vue/cli-plugin-babel": "^4.0.0",
+    "@vue/cli-plugin-e2e-nightwatch": "^4.0.0",
+    "@vue/cli-plugin-router": "^4.0.0",
+    "@vue/cli-plugin-unit-mocha": "^4.0.0",
+    "@vue/cli-plugin-vuex": "^4.0.0",
+    "@vue/cli-service": "^4.0.0",
+    "@vue/test-utils": "1.0.0-beta.29",
+    "chai": "^4.1.2",
+    "chromedriver": "77",
+    "geckodriver": "^1.19.0",
+    "less": "^3.0.4",
+    "less-loader": "^5.0.0",
+    "vue-template-compiler": "^2.6.10"
   }
 }
