--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "mongoose": "^5.7.6",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "ws": "^7.2.0"
   }
 }
