--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
+
+HOST=http://localhost
 DB_HOST=mongodb://localhost/
 DB_NAME=factory
-HOST_FRONT=http://localhost:6060
 SERVER_PORT=7070
 WEB_SERVER_PORT=6060
 WS_PORT=8080
